# jn.mavis

./: CMakeLists.txt
example/SimpleExample/: CMakeLists.txt  uArchInfo.h
impl/: DTable.tcc
mavis/: AnnotationRegistry.hpp  DTable.h  ExtensionManager.hpp  FormGeneric.hpp  InstMetaData.h  JSONUtils.hpp  JsonMacros.hpp  Overlay.hpp  PseudoBuilder.hpp
mavis/extension_managers/: RISCVExtensionManager.hpp
test/basic/: CMakeLists.txt  uArchInfo.h
test/directed/: CMakeLists.txt
test/extensions/: CMakeLists.txt
